calculadora/calc.output
Grammar

    0 $accept: programa $end

    1 programa: programa calculo ENTER
    2         | %empty

    3 calculo: expr
    4        | VAR IGUAL expr

    5 expr: NUM
    6     | VAR
    7     | expr MAIS expr
    8     | expr MENOS expr
    9     | expr VEZES expr
   10     | expr BARRA expr
   11     | ABRE expr FECHA


Terminals, with rules where they appear

$end (0) 0
error (256)
NUM (258) 5
MENOS (259) 8
MAIS (260) 7
VAR (261) 4 6
VEZES (262) 9
BARRA (263) 10
ABRE (264) 11
FECHA (265) 11
IGUAL (266) 4
ENTER (267) 1


Nonterminals, with rules where they appear

$accept (13)
    on left: 0
programa (14)
    on left: 1 2, on right: 0 1
calculo (15)
    on left: 3 4, on right: 1
expr (16)
    on left: 5 6 7 8 9 10 11, on right: 3 4 7 8 9 10 11


State 0

    0 $accept: . programa $end

    $default  reduce using rule 2 (programa)

    programa  go to state 1


State 1

    0 $accept: programa . $end
    1 programa: programa . calculo ENTER

    $end  shift, and go to state 2
    NUM   shift, and go to state 3
    VAR   shift, and go to state 4
    ABRE  shift, and go to state 5

    calculo  go to state 6
    expr     go to state 7


State 2

    0 $accept: programa $end .

    $default  accept


State 3

    5 expr: NUM .

    $default  reduce using rule 5 (expr)


State 4

    4 calculo: VAR . IGUAL expr
    6 expr: VAR .

    IGUAL  shift, and go to state 8

    $default  reduce using rule 6 (expr)


State 5

   11 expr: ABRE . expr FECHA

    NUM   shift, and go to state 3
    VAR   shift, and go to state 9
    ABRE  shift, and go to state 5

    expr  go to state 10


State 6

    1 programa: programa calculo . ENTER

    ENTER  shift, and go to state 11


State 7

    3 calculo: expr .
    7 expr: expr . MAIS expr
    8     | expr . MENOS expr
    9     | expr . VEZES expr
   10     | expr . BARRA expr

    MENOS  shift, and go to state 12
    MAIS   shift, and go to state 13
    VEZES  shift, and go to state 14
    BARRA  shift, and go to state 15

    $default  reduce using rule 3 (calculo)


State 8

    4 calculo: VAR IGUAL . expr

    NUM   shift, and go to state 3
    VAR   shift, and go to state 9
    ABRE  shift, and go to state 5

    expr  go to state 16


State 9

    6 expr: VAR .

    $default  reduce using rule 6 (expr)


State 10

    7 expr: expr . MAIS expr
    8     | expr . MENOS expr
    9     | expr . VEZES expr
   10     | expr . BARRA expr
   11     | ABRE expr . FECHA

    MENOS  shift, and go to state 12
    MAIS   shift, and go to state 13
    VEZES  shift, and go to state 14
    BARRA  shift, and go to state 15
    FECHA  shift, and go to state 17


State 11

    1 programa: programa calculo ENTER .

    $default  reduce using rule 1 (programa)


State 12

    8 expr: expr MENOS . expr

    NUM   shift, and go to state 3
    VAR   shift, and go to state 9
    ABRE  shift, and go to state 5

    expr  go to state 18


State 13

    7 expr: expr MAIS . expr

    NUM   shift, and go to state 3
    VAR   shift, and go to state 9
    ABRE  shift, and go to state 5

    expr  go to state 19


State 14

    9 expr: expr VEZES . expr

    NUM   shift, and go to state 3
    VAR   shift, and go to state 9
    ABRE  shift, and go to state 5

    expr  go to state 20


State 15

   10 expr: expr BARRA . expr

    NUM   shift, and go to state 3
    VAR   shift, and go to state 9
    ABRE  shift, and go to state 5

    expr  go to state 21


State 16

    4 calculo: VAR IGUAL expr .
    7 expr: expr . MAIS expr
    8     | expr . MENOS expr
    9     | expr . VEZES expr
   10     | expr . BARRA expr

    MENOS  shift, and go to state 12
    MAIS   shift, and go to state 13
    VEZES  shift, and go to state 14
    BARRA  shift, and go to state 15

    $default  reduce using rule 4 (calculo)


State 17

   11 expr: ABRE expr FECHA .

    $default  reduce using rule 11 (expr)


State 18

    7 expr: expr . MAIS expr
    8     | expr . MENOS expr
    8     | expr MENOS expr .
    9     | expr . VEZES expr
   10     | expr . BARRA expr

    VEZES  shift, and go to state 14
    BARRA  shift, and go to state 15

    $default  reduce using rule 8 (expr)


State 19

    7 expr: expr . MAIS expr
    7     | expr MAIS expr .
    8     | expr . MENOS expr
    9     | expr . VEZES expr
   10     | expr . BARRA expr

    VEZES  shift, and go to state 14
    BARRA  shift, and go to state 15

    $default  reduce using rule 7 (expr)


State 20

    7 expr: expr . MAIS expr
    8     | expr . MENOS expr
    9     | expr . VEZES expr
    9     | expr VEZES expr .
   10     | expr . BARRA expr

    $default  reduce using rule 9 (expr)


State 21

    7 expr: expr . MAIS expr
    8     | expr . MENOS expr
    9     | expr . VEZES expr
   10     | expr . BARRA expr
   10     | expr BARRA expr .

    $default  reduce using rule 10 (expr)
